# brcrawl

./: .gitignore  README  README.md  brcrawl.sh  example.blocklist.txt  example.urls.txt  filter_urls.py  pyproject.toml  rss_grabber.py  unique_urls.py
backend/: Dockerfile  Makefile  README.md  app.py  cli.py  db.py  docker-compose.yml  feed_processor.py  functions.py  pyproject.toml  schema.sql
backend/static/: script.js  style.css
backend/templates/: base.html
backend/templates/views/: about.html  index.html  sources.html
brcrawl/: middlewares.py  settings.py
brcrawl/spiders/: bearblog_discover_spider.py  external_urls_spider.py  rss_spider.py
experiments/: README  truncated_llm.sh  validate_truncated_results.py
experiments/blog_activity/: README.md  blog_lifetime.py  community_activity.py  feed_items_per_month.py  new_blogs_per_month.py
experiments/commoncrawl/: README.md  concat_results.sh  githubpages.sh
experiments/reduce_inference_tokens/: README  generate_truncated_dataset.sh  run_truncated_inference.sh
scraper/: README.md  brcrawl.sh  main.py  pyproject.toml  scrape.sh  scrapy.cfg  unique_urls.py
scraper/brcrawl/: items.py  pipelines.py  settings.py
scraper/brcrawl/spiders/: external_urls_spider.py  lang_detect_spider.py  llm_classifier_spider.py  llm_classifier_truncate_spider.py  rss_spider.py
website/: .gitignore  README.md  build.sh  build_html.py  feed.json.tmpl  feed_mod.json.tmpl  pyproject.toml
